[ADD] Junit 테스트